--- a/assets/silk-dreams.webflow.css.liquid
+++ b/assets/silk-dreams.webflow.css.liquid
@@ -6298,10 +6298,6 @@ blockquote {
   overflow: hidden;
 }
 
-.image_slider_section.swiper-container {
-  padding-bottom: 40px;
-}
-
 .slide__block {
   border-radius: 2px;
 }
@@ -16431,7 +16427,7 @@ blockquote {
   }
 
   .image_slider_section.swiper-container {
-    padding-bottom: 0px !important;
+    padding-bottom: 0 !important;
   }
 
   .collection-section {
@@ -18983,9 +18979,7 @@ body[data-aos-duration="500"] [data-aos] {
 [data-aos^="fade"][data-aos^="fade"] {
   transition-property: opacity, transform;
 }
-.image_slider_section.swiper-container {
-  padding-bottom: 40px;
-}
+
 .swiper-pointer-events {
   touch-action: pan-y;
 }
