--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -66,6 +66,96 @@
     {% render 'scripts' %}
     {{ 'udesly-shopify.min.js' | asset_url | script_tag }}
 <script>var currentSection = document.currentScript.closest('.shopify-section');currentSection.setAttribute("class","header colored-header");</script>
+
+<style>
+  @media screen and (max-width: 479px) {
+  .swiper-pagination-container.collection {
+    display: -webkit-box !important;
+    display: -webkit-flex !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    margin-top: 16px !important;
+    position: relative !important;
+  }
+  .swiper-pagination.swiper-pagination-clickable.swiper-pagination-bullets {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex !important;
+  grid-column-gap: 18px !important;
+}
+.swiper-pagination.swiper-pagination-clickable.swiper-pagination-bullets {
+  position: relative !important;
+}
+.swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+  bottom: 0px !important;
+}
+.swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+  bottom: 25px !important;
+  left: 0 !important;
+  width: 100% !important;
+}
+.swiper-pagination {
+  position: absolute !important;
+  text-align: center !important;
+  transition: .3s opacity !important;
+  transform: translate3d(0,0,0) !important;
+  z-index: 10 !important;
+}
+.swiper-pagination {
+  position: relative;
+  grid-column-gap: 17px;
+}
+.swiper-pagination {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  grid-column-gap: 17px;
+}
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 0 var(--swiper-pagination-bullet-horizontal-gap,4px);
+}
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  opacity: 1 !important;
+}
+.swiper-pagination-clickable .swiper-pagination-bullet {
+  cursor: pointer;
+}
+.swiper-pagination-bullet {
+  background-color: #CBB9A8 !important;
+  width: 8px !important;
+  height: 8px !important;
+  opacity: 0.24 !important;
+}
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 0 var(--swiper-pagination-bullet-horizontal-gap,4px);
+}
+.swiper-pagination-clickable .swiper-pagination-bullet {
+  cursor: pointer;
+}
+
+.swiper-pagination-bullet {
+
+  display: inline-block;
+  border-radius: 50%;
+  background: var(--swiper-pagination-bullet-inactive-color,#000);
+  opacity: var(--swiper-pagination-bullet-inactive-opacity, .2);
+}
+.swiper-pagination-bullet {
+  padding-right: 0px;
+  padding-bottom: 0px;
+}
+  }
+</style>
         
 {% schema %}
 {
