--- a/assets/silk-dreams.webflow.css.liquid
+++ b/assets/silk-dreams.webflow.css.liquid
@@ -19223,3 +19223,8 @@ span.swiper-pagination-bullet {
 .slidecart-items {
   padding-bottom: 20px;
 }
+
+.recomm-button {
+  background: transparent;
+  border: none;
+}
