--- a/assets/silk-dreams.webflow.css.liquid
+++ b/assets/silk-dreams.webflow.css.liquid
@@ -7028,6 +7028,63 @@ blockquote {
   border-radius: 50%;
 }
 
+@media only screen and (max-width: 479px) {
+  .swatch-img.active {
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+  }
+  .active-selected-swatch {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 44px;
+    height: 44px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: var(--color-n481422c0);
+    border-radius: 50%;
+  }
+  .image-swatch {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    overflow: hidden;
+    width: 44px;
+    height: 44px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-radius: 50%;
+  }
+  .active-selected-swatch {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 44px !important;
+    height: 44px !important;
+    border-style: solid;
+    border-width: 2px;
+    border-color: var(--color-n481422c0);
+    border-radius: 50%;
+  }
+  .swatch-group {
+    flex-wrap: wrap;
+    grid-row-gap: 10px !important;
+  }
+}
+
 .active-selected-swatch {
   position: absolute;
   left: 0;
