--- a/assets/silk-dreams.webflow.css.liquid
+++ b/assets/silk-dreams.webflow.css.liquid
@@ -6981,6 +6981,7 @@ blockquote {
   padding-top: 16px;
   padding-bottom: 16px;
   grid-column-gap: 10px;
+  flex-wrap: wrap;
 }
 
 .button-group {
