--- a/assets/silk-dreams.webflow.css.liquid
+++ b/assets/silk-dreams.webflow.css.liquid
@@ -19289,3 +19289,11 @@ span.swiper-pagination-bullet {
   background: transparent;
   border: none;
 }
+
+.product-grid:before {
+  display: none;
+}
+
+.product-grid:after {
+  display: none;
+}
