--- a/assets/silk-dreams.webflow.css.liquid
+++ b/assets/silk-dreams.webflow.css.liquid
@@ -12233,7 +12233,8 @@ blockquote {
   }
 
   .grid__item.product__img__wrapper.medium-up--one-half {
-    margin-bottom: 16px;
+    margin-top: -26px;
+    margin-bottom: 0;
     padding-left: 0;
   }
 
@@ -16119,7 +16120,7 @@ blockquote {
   }
 
   .grid__item.product__img__wrapper.medium-up--one-half {
-    margin-bottom: 16px;
+    margin-bottom: 0;
     padding-left: 0;
   }
 
@@ -19288,12 +19289,4 @@ span.swiper-pagination-bullet {
 .recomm-button {
   background: transparent;
   border: none;
-}
-
-.product-grid:before {
-  display: none;
-}
-
-.product-grid:after {
-  display: none;
 }
