--- a/assets/silk-dreams.webflow.css.liquid
+++ b/assets/silk-dreams.webflow.css.liquid
@@ -19290,3 +19290,7 @@ span.swiper-pagination-bullet {
   background: transparent;
   border: none;
 }
+
+.product__grid.product__grid--slides.flickity-enabled.is-draggable.is-fade {
+  overflow-y: hidden;
+}
