--- a/assets/silk-dreams.webflow.css.liquid
+++ b/assets/silk-dreams.webflow.css.liquid
@@ -19294,3 +19294,7 @@ span.swiper-pagination-bullet {
 .product__grid.product__grid--slides.flickity-enabled.is-draggable.is-fade {
   overflow-y: hidden;
 }
+
+.flickity-slider {
+  overflow-y: hidden;
+}
