--- a/assets/silk-dreams.webflow.css.liquid
+++ b/assets/silk-dreams.webflow.css.liquid
@@ -19295,6 +19295,22 @@ span.swiper-pagination-bullet {
   overflow-y: hidden;
 }
 
+.product__media {
+  overflow-y: hidden;
+}
+
+.grid__item.product__img__wrapper.medium-up--one-half {
+  overflow-y: hidden;
+}
+
 .flickity-slider {
+  overflow-y: hidden;
+}
+
+.flickity-viewport {
+  overflow-y: hidden;
+}
+
+.slider-wrapper {
   overflow-y: hidden;
 }
