--- a/assets/silk-dreams.webflow.css.liquid
+++ b/assets/silk-dreams.webflow.css.liquid
@@ -19293,6 +19293,7 @@ span.swiper-pagination-bullet {
 
 .product__grid.product__grid--slides.flickity-enabled.is-draggable.is-fade {
   overflow-y: hidden;
+  position: relative;
 }
 
 .product__media {
